// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c12 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Head />
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      />
      <article
        className="c11"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div>
              <div>
                <div
                  className="c14"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-bottom: 20px;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c12 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Head />
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      />
      <article
        className="c11"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div>
              <div>
                <div
                  className="c14"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c12 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Head />
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      />
      <article
        className="c11"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div>
              <div>
                <div
                  className="c14"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c12 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Head />
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      />
      <article
        className="c11"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div>
              <div>
                <div
                  className="c14"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
